Fixed table header.  Sidebar remains visible with a min-width

--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -45,9 +45,11 @@ body {
  */
 
 /* Hide for mobile, show later */
-.sidebar {
+@media (min-width: 280px) .sidebar {
   display: none;
+  min-width: 280px;
 }
+
 @media (min-width: 768px) {
   .sidebar {
     line-height:9px;
@@ -61,6 +63,7 @@ body {
     padding-left: 10px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    min-width: 280px;
     /*background-color: #f5f5f5;
     border-right: 1px solid #eee;*/
   }
@@ -154,4 +157,8 @@ body {
     /*font-weight: 500;*/
     line-height: 13px;
 
+}
+
+.table-info {
+    background-color: #d9edf7;
 }
